--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,10 @@ select = [
     "PERF", "RUF",
 ]
 ignore = ["D203", "D213", "FA102"]
+extend-ignore = ["D", "FIX002", "TD003"]
 line-length = 120
 
-[tool.ruff.lint.per-file-ignores]
+[tool.ruff.per-file-ignores]
 "tests/test_*.py" = ["S101"]
 
 [tool.mypy]
